[package]
name = "tokio_conn_pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1"
async-trait = "0.1"
futures-core = "0.3"
noop-waker = "0.1"
tokio = { version = "1", features = [] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
